--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     font-family: 'Roboto Condensed';
     font-style: normal;
     font-weight: 700;
+    font-display: swap;
     src: local(''),
         url('/fonts/roboto-condensed.woff2') format('woff2'),
         url('/fonts/roboto-condensed.woff') format('woff');
@@ -11,6 +12,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src: local(''),
         url('/fonts/roboto-v27-latin-regular.woff2') format('woff2'),
         url('/fonts/roboto-v27-latin-regular.woff') format('woff');
@@ -20,6 +22,7 @@
     font-family: 'Roboto';
     font-style: italic;
     font-weight: 400;
+    font-display: swap;
     src: local(''),
         url('/fonts/roboto-v27-latin-italic.woff2') format('woff2'),
         url('/fonts/roboto-v27-latin-italic.woff') format('woff');
@@ -29,6 +32,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
+    font-display: swap;
     src: local(''),
         url('/fonts/roboto-v27-latin-700.woff2') format('woff2'),
         url('/fonts/roboto-v27-latin-700.woff') format('woff');
@@ -38,6 +42,7 @@
     font-family: 'Roboto';
     font-style: italic;
     font-weight: 700;
+    font-display: swap;
     src: local(''),
         url('/fonts/roboto-v27-latin-700italic.woff2') format('woff2'),
         url('/fonts/roboto-v27-latin-700italic.woff') format('woff');
